<resources>
    <string name="app_name">旅游助手</string>
    <string name="attraction">景点</string>
    <string name="strategy">攻略</string>
    <string name="travelogue">游记</string>
    <string name="mine">我的</string>
    <string name="action_scan">搜索</string>
    <string name="action_notifications">通知</string>
    <string name="action_settings">设置</string>
    <string name="action_about">关于</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="phone_num">手机号</string>
    <string name="password">密码</string>
    <string name="name">姓名</string>
    <string name="verify_sms_code">请输入短信验证码</string>
    <string name="re_send">重发验证码</string>
    <string name="phoneNumOrUserName">手机号/用户名</string>
    <string name="price_title">收费价格</string>
    <string name="open_time_title">开放时间</string>
    <string name="mAbstract_title">景点简介</string>
    <string name="description_title">景点详情</string>
    <string name="comment_title">景点评论</string>
    <string name="sure">确定</string>
    <string name="score">评分：</string>
    <string name="comment_hint">请输入评价</string>
    <string name="add_comment">添加评论</string>
    <string name="no_comment">暂无评论</string>
    <string name="action_share">分享</string>
    <string name="action_download">下载</string>
    <string name="share_app">请选择</string>
    <string name="share">【旅游助手】APP下载地址：https://www.pgyer.com/Trave\n\n</string>
    <string name="download_comment">离线内容</string>
    <string name="my_travels">我的游记</string>
    <string name="add_travel">发布游记</string>
    <string name="change_face">修改头像</string>
    <string name="picture">拍照</string>
    <string name="choose">请选择</string>
    <string name="gallery">相册</string>
    <string name="SetInformation">编辑个人信息</string>
    <string name="logout">退出</string>
    <string name="sure_logout">是否确认退出登录</string>
    <string name="cancel">取消</string>
    <string name="take_time_title">用时参考</string>
    <string name="address_title">景点地址</string>
    <string name="traffic_title">交通路线</string>
    <string name="description_title2">游记详情</string>
    <string name="comment_title2">游记评论</string>
    <string name="description_title3">攻略详情</string>
    <string name="comment_title3">攻略评论</string>
    <string name="about">关于</string>
    <string name="settings">设置</string>
    <string name="search">搜索</string>
    <string name="version">版本号%s</string>
    <string name="catchword">要么读书，要么旅行，\n身体和心灵总有一个要在路上。</string>
    <string name="developer">开发者\n重庆邮电大学</string>
    <string name="get_version_fail">获取失败</string>
    <string name="share_title">分享</string>
    <string name="base_settings">基本设置</string>
    <string name="shake_send_feedback">摇一摇发送反馈</string>
    <string name="shake_send_feedback_content">遇到问题？摇一摇手机就能反馈～</string>
    <string name="auto_update">自动更新软件</string>
    <string name="auto_update_content">使用WIFI时，自动下载更新包</string>
    <string name="back_mode">退出模式设置</string>
    <string name="back_mode_content">双击返回键，退出程序</string>
    <string name="notification_settings">通知设置</string>
    <string name="push_message">推送消息设置</string>
    <string name="push_message_content">接受商家推送信息</string>
    <string name="delete">删除</string>
    <string name="sure_delete">是否确定删除</string>
    <string name="welcome1">\t\t\t\t旅行教给人们宽容之美德。\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t—— 爱利克</string>
    <string name="welcome2">\t\t\t\t世界是一本书，而不旅行的人们只读了其中的一页。\n\t\t\t\t\t\t\t\t\t\t—— 奥古斯狄尼斯</string>
    <string name="welcome3">\t\t\t\t旅游是获得愉悦感和浪漫性的最好媒介。\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t—— 麦金托什</string>
    <string name="by_cqupt">BY@CQUPT</string>
</resources>
