<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_attraction_details">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relativeLayout0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/price_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/ratingBar"
                android:text="@string/price_title"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/ratingBar"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toEndOf="@+id/price_title"
                android:layout_toRightOf="@+id/price_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorLightBlack" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/myRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/price"
                android:layout_toRightOf="@+id/price"
                android:isIndicator="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relativeLayout0"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/open_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/open_time_title"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/open_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toEndOf="@+id/open_time_title"
                android:layout_toRightOf="@+id/open_time_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorLightBlack" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout1"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/mAbstract_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/mAbstract_title"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/mAbstract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toEndOf="@+id/mAbstract_title"
                android:layout_toRightOf="@+id/mAbstract_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorLightBlack" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout2"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/description_title"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toEndOf="@+id/description_title"
                android:layout_toRightOf="@+id/description_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorLightBlack" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout3"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/comment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/comment_title"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toEndOf="@+id/comment_title"
                android:layout_toRightOf="@+id/comment_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorLightBlack" />

        </RelativeLayout>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>