<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@mipmap/mine_background">

            <com.cqupt.travelhelper.utils.RoundImageView xmlns:myxmlns="http://schemas.android.com/apk/"
                android:id="@+id/pic"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                myxmlns:border_color="@color/colorWhite"
                myxmlns:border_width="2dp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pic"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="23dp"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/download_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background_grey"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:src="@drawable/ic_download_comment"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/download_comment"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/colorLightBlack" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mine_download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background_grey"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:src="@drawable/ic_travels"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/mine_download"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/colorLightBlack" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/add_travel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background_grey"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:src="@drawable/ic_add"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/add_travel"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/colorLightBlack" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/colorLightGrey" />

            <LinearLayout
                android:id="@+id/settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background_grey">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="20dp"
                    android:text="@string/action_settings"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/colorLightBlack" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background_grey">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="20dp"
                    android:text="@string/action_about"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/colorLightBlack" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background_grey">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/logout"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/colorLightBlack" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>